# sub2api-desktop

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  playwright.config.ts  test-report.md  tsconfig.json  vite.config.ts  vitest.config.ts
cloud/: .dev.vars.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  worker-configuration.d.ts  wrangler.toml
cloud/src/: auth-routes.ts  (+28 more)
core/: go.mod  go.sum
docs/: AMBER_V0.2.0_DEVELOPMENT_SPEC.md  AMBER_V0.3.1_RELIABILITY_FIX_PLAN.md  AMBER_V0.3.2_ACCOUNT_PANEL_AND_QUEUE_PLAN.md  AMBER_V0.3.3_IDEMPOTENCY_TIMEOUT_PLAN.md  AMBER_V0.4.0_CLOUD_FRIENDS_SHARING_PLAN.md  AMBER_V0.4.0_DEPLOYMENT_CHECKLIST.md  AMBER_V0.4.1_DEVELOPMENT_PLAN.md  AMBER_V0.4.2_QUICK_SHARING_PLAN.md  AMBER_V0.4.3_SHARING_CONSISTENCY_FIX.md  AMBER_V0.4.4_RELEASE_NOTES.md  AMBER_V0.4.4_WEBSITE_TASK_HANDOFF.md  AMBER_V0.4.4_WORKSPACE_DEVICE_ROUTING_PLAN.md  USAGE.md
scripts/: build-all.ps1  build-sidecar.ps1  capture-docs.mjs  check-version.ps1
src/: App.vue  date.test.ts  date.ts  format.test.ts  format.ts  i18n.test.ts  i18n.ts  main.ts  platform.ts  router.ts  shims-vue.d.ts  store.ts  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  supervisor.rs  workspace.rs
src-tauri/windows/: hooks.nsh
website/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  wrangler.toml
(+242 files in other folders)
